# lwrad

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
lw/: __init__.py  cpu.py  gpu.py  main.py  utils.py
lwrad/: __main__.py  cpu.py  cuda.py  main.py
tests/: test.h5  test_spectrum.py  test_speed.py
